--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 的眷恋，现在能遇见你。愿你无忧无虑，开心快乐。
 
 
-                              vv
 	</pre>
 		</div>
 
@@ -45,7 +44,7 @@
 				</div>
 				<div id="loveu">
 					Hope you<br/> will be happy every day<br/>
-					<div class="signature">-- vv</div>
+					<div class="signature"></div>
 				</div>
 			</div>
 		</div>
